Closed Bug 255458 Opened 22 years ago Closed 22 years ago

live bookmark shouldnt use cache

Categories

(Firefox :: Bookmarks & History, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: nirvn.asia, Assigned: vlad)

Details

(Keywords: fixed-aviary1.0)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.2) Gecko/20040811 Firefox/0.9.1+ Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.2) Gecko/20040811 Firefox/0.9.1+ maybe I'm wrong but I have the strong feeling live bookmark uses cache when it comes to refresh. Often I go to a website to find there are new articles and the rss feed didn't refresh properly ... I downloaded the Sage extension after to find out it was correctly updating the rss feeds. So my guess was that the live bmark uses the cache system and sage doesn't; it might be another problem but the fact is : Sage properly detects updated rss while the internal rss system doesn't. Please have a look at that, I like the way its done with bookmark but its useless if the updates are not working well. Reproducible: Always Steps to Reproduce: 1.Download Sage extension and install 2.Put some rss feeds in sage and the same also as live bookmark 3.Use both on a regular basis (always starting with the live bookmark when you update your rss) Actual Results: You will see sage shows the updated rss when the live bookmark didnt find any Expected Results: Shouldnt see any difference I guessed it was dealing with using the cache or not because once Sage gets the updated rss feeds, the live bookmark will get them too. I will now try to desactivate the network.http-usecache pref and see if it makes a difference (I'm sure it will)
okey confirmed ... I changed the _obscure_ browser.cache.check_doc_frequency value ( I though 3 meant a kind of ratio like 1/3 ...) I changed the value to 1 (meaning checks if an object in the cache is new every time it loads the objects) and the rss feeds got updated as often as sage ... this made me happy but also made me think the rss feed system is useless to anyway who wants to use it to get news _as fast as possible_ ... with firefox out of the box, I will insert a rss feed ... check in 24 hours later to see no change but if I go on the website, some news might be added on the site that is not shown in the rss feed because the rss object was not expired ... soooo, either you change the browser.cache.check_doc_frequency to 2 (which makes more sense to any common user: the value 2 means once per session, the cache system will check for updates ... rather than once the object is expired, it'll check (some people don't put any expiration dates, and it cannot be reliable on rss feeds) or the rss feeds doesn't use the browser.cache.check_doc_frequency and when the user clicks "refresh live bookmarks", it actually seeks to refresh itself bypassing the caching system which is irrelevant for rss feeds (and wouldn't hurt anyone since the files are often small) you should really think of a solution before 1.0 final otherwise its a useless system if you don't hack thou about:config and know the browser.cache.check_doc_frequency values (not explained in the help system btw, but only when searching on mozilla.org) you would avoid bad reviews on your rss feeds, and nobody would switch to opera for their working-without-cache feed system :) (btw, this browser.cache.check_doc_frequency value should deserve some options in the advanced pane, I think I'll fill a bug for that)
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
quick update: the browser.cache.check_bla_bla helped a little bit but firefox is still missing some updated feeds (just loading the old file). I think it has two main reasons: cache + sometimes I feel firefox forgets to check for updates on certain feeds.
okey ... it seems that some livemarks get updated and some simply load the cached version _even though_ the cache settings are set to "check doc everytime" when using sage, it'll properly load the new rss feed and then firefox will show the new feeds if you reload the livemarks because the cache as been updated by sage. I really thought I could get rid of sage... lets try to narrow down the problem and get the rss feed system to work properly
at first I thought it was a problem of cache, but I realise now it must be something wrong with the update prossedure in the feed system of firefox. Some random thoughts I would look at if I had a dev. machin * the update system doesnt read the browser.cache.check_doc_frequency value (so if you set it to 1 - always check for newer doc - it'll still do the default behaviour (check when doc outdated) * when the feed is download, the function that checks if there is something new is broken and leaves the old file * etc. at first when I created this thread I really thought it was a simple question of caching settings put it turns out its more than that
Flags: blocking-aviary1.0?
Just set cache bypass on the load.
landed on aviary, will make it to trunk when I merge
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Flags: blocking-aviary1.0?
Keywords: fixed-aviary1.0
Resolution: --- → FIXED
sorry for bugspam, long-overdue mass reassign of ancient QA contact bugs, filter on "beltznerLovesGoats" to get rid of this mass change
QA Contact: mconnor → bookmarks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: