b=255458, live bookmark reload should bypass cache, a=ben